--- a/resources/public/index.html
+++ b/resources/public/index.html
@@ -3,12 +3,15 @@
   <head>
     <script src="http://fb.me/react-0.11.1.js"></script>
     <!-- <script src="https://code.jquery.com/jquery-1.11.0.js"></script> -->
+    <!-- <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/semantic&#45;ui/0.19.3/css/semantic.min.css"> -->
+    <link rel="stylesheet" href="//beta.semantic-ui.com/dist/semantic.css">
     <link href="css/style.css" rel="stylesheet" type="text/css">
   </head>
   <body>
     <div id="main-area">
-      <h2>Figwheel template</h2>
-      <p>Checkout your developer console.</p>
+      <div class="ui indeterminate text loader">
+      <h2>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Loading...</h2>
+      </div>
     </div>
     <script src="js/compiled/out/goog/base.js" type="text/javascript"></script>
     <script src="js/compiled/aoide.js" type="text/javascript"></script>
