fix: bump semantic-ui to official 1.0

--- a/resources/public/index.html
+++ b/resources/public/index.html
@@ -3,8 +3,7 @@
   <head>
     <script src="http://fb.me/react-0.11.1.js"></script>
     <!-- <script src="https://code.jquery.com/jquery-1.11.0.js"></script> -->
-    <!-- <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/semantic&#45;ui/0.19.3/css/semantic.min.css"> -->
-    <link rel="stylesheet" href="//beta.semantic-ui.com/dist/semantic.css">
+    <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/semantic-ui/1.0.0/semantic.min.css">
     <link href="css/style.css" rel="stylesheet" type="text/css">
   </head>
   <body>
